# Test_Case_Wallet

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
apps/wallet/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
